--- a/examples/agnostic-examples/iterative_width/SConstruct
+++ b/examples/agnostic-examples/iterative_width/SConstruct
@@ -8,14 +8,14 @@ common_env = Environment()
 
 include_paths = ['../../../include', '../../../interfaces/agnostic', '../../../interfaces/ff-wrapped',  '../../../external', '/usr/local/include' ]
 lib_paths = [ '/opt/local/lib','../../..', '../../../interfaces/agnostic', '../../../interfaces/ff-wrapped', '../../../external/libff', '/usr/local/lib' ]
-libs = ['Judy', 'aptk-ff-wrap', 'aptk-base', 'aptk',  'boost_program_options-mt', 'ff']
+libs = ['Judy', 'aptk-ff-wrap', 'aptk-base', 'aptk',  'boost_program_options', 'ff']
 
 common_env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
 
 if int(debug) == 1 :
 	common_env.Append( CCFLAGS = ['-g','-Wall', '-std=c++0x', '-DDEBUG' ] )
 else:
-	common_env.Append( CCFLAGS = ['-m64','-O3','-Wall', '-std=c++0x', '-fpermissive' ,'-DNDEBUG'] )
+	common_env.Append( CCFLAGS = ['-O3','-Wall', '-std=c++0x', '-fpermissive' ,'-DNDEBUG'] )
 
 cxx_sources = Glob('*.cxx')
 c_sources = Glob('*.c')
