--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,12 @@ examples/agnostic-examples/h_cost_functions/h-cost-funcs
 examples/agnostic-examples/rwa-planner/planner
 examples/agnostic-examples/wa-planner/planner
 examples/ff-interface/ff-parser-example
+examples/agnostic-examples/siw/siw
+examples/agnostic-examples/successor_generation/succ-gen
 
 # Local directories 
 spikes
+
+# Generated files
+benchmarks/ipc-2006/*.out
+benchmarks/ipc-2006/*.png
