--- a/examples/agnostic-examples/siw/SConstruct
+++ b/examples/agnostic-examples/siw/SConstruct
@@ -13,7 +13,7 @@ libs = ['Judy', 'aptk-ff-wrap', 'aptk-base', 'aptk',  'boost_program_options', '
 common_env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
 
 if int(debug) == 1 :
-	common_env.Append( CCFLAGS = ['-g','-Wall', '-std=c++0x', '-DNDEBUG' ] )
+	common_env.Append( CCFLAGS = ['-g','-Wall', '-std=c++0x', '-DDEBUG' ] )
 else:
 	common_env.Append( CCFLAGS = ['-O3','-Wall', '-std=c++0x', '-fpermissive' ,'-DNDEBUG'] )
 
