Profiling with Google CPU Profiler

--- a/planners/siw/SConstruct
+++ b/planners/siw/SConstruct
@@ -3,7 +3,7 @@ import os
 debug = ARGUMENTS.get( 'debug', 0 )
 common_env = Environment()
 
-common_env.Append( CCFLAGS = [ '-Wall', '-std=c++0x' ] )
+common_env.Append( CCFLAGS = [ '-Wall', '-std=c++0x', '-fPIC' ] )
 
 if int(debug) == 1 :
         common_env.Append( CCFLAGS = ['-g',  '-DDEBUG' ] )
