--- a/planners/siw/SConstruct
+++ b/planners/siw/SConstruct
@@ -1,9 +1,9 @@
 import os
 
 debug = ARGUMENTS.get( 'debug', 0 )
-common_env = Environment()
+common_env = Environment(ENV = os.environ)
 
-common_env.Append( CCFLAGS = [ '-Wall', '-std=c++0x', '-fPIC' ] )
+common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11', '-fPIC' ] )
 
 if int(debug) == 1 :
         common_env.Append( CCFLAGS = ['-g',  '-DDEBUG' ] )
