--- a/planners/bfs_f/SConstruct
+++ b/planners/bfs_f/SConstruct
@@ -3,7 +3,7 @@ import os
 debug = ARGUMENTS.get( 'debug', 0 )
 common_env = Environment(ENV = os.environ)
 
-common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11' ] )
+common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11', '-fPIC' ] )
 
 if int(debug) == 1 :
         common_env.Append( CCFLAGS = ['-g',  '-DDEBUG' ] )
