--- a/planners/siw-ff/SConstruct
+++ b/planners/siw-ff/SConstruct
@@ -16,7 +16,7 @@ Export( 'common_env' )
 
 generic_objs = SConscript('../../src/SConscript.aptk')
 agnostic_objs = SConscript('../../interfaces/agnostic/SConscript.agnostic')
-ff_wrapper = SConscript('../../interfaces/ff-wrapped/SConscript.ff')
+ff_wrapper_objs = SConscript('../../interfaces/ff-wrapped/SConscript.ff')
 siw_objs = SConscript('src/SConscript')
 
-common_env.Program( 'siw', siw_objs + generic_objs + agnostic_objs + python_objs ) 
+common_env.Program( 'siw', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
