--- a/planners/at_bfs_f-ff/SConstruct
+++ b/planners/at_bfs_f-ff/SConstruct
@@ -19,4 +19,4 @@ agnostic_objs = SConscript('../../interfaces/agnostic/SConscript.agnostic')
 ff_wrapper_objs = SConscript('../../interfaces/ff-wrapped/SConscript.ff')
 siw_objs = SConscript('src/SConscript')
 
-common_env.Program( 'bfs_f', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
+common_env.Program( 'at_bfs_f', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
