FIXED: Missing boost library path

--- a/planners/siw-ff/src/SConscript
+++ b/planners/siw-ff/src/SConscript
@@ -10,9 +10,8 @@ libs = [ 'boost_program_options' ]
 lib_paths = []
 
 if int(ipc14_build) == 1 :
-	include_paths.append( '../external/judy-1.0.5/src' )
-	include_paths.append( '/opt/boost/include' )	
-	common_env.Append( LIBPATH = os.path.abspath('../external/judy-1.0.5/src/obj') )
+	include_paths.append( '/opt/boost/include' )
+	lib_paths.append( '/opt/boost/lib' )	
 
 common_env.Append( LIBS=libs)
 common_env.Append( LIBPATH=[ os.path.abspath(p) for p in lib_paths ] )
