--- a/planners/dfs_rpiw-ff/src/SConscript
+++ b/planners/dfs_rpiw-ff/src/SConscript
@@ -6,7 +6,7 @@ ipc14_build = ARGUMENTS.get( 'ipc14_build', 0 )
 include_paths = ['.']
 common_env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
 
-libs = [ 'boost_program_options' ]
+libs = [ 'boost_program_options-mt' ]
 lib_paths = ['/usr/local/lib']
 
 if int(ipc14_build) == 1 :
