--- a/planners/dfs_rpiw-ff/SConstruct
+++ b/planners/dfs_rpiw-ff/SConstruct
@@ -19,4 +19,4 @@ agnostic_objs = SConscript('../../interfaces/agnostic/SConscript.agnostic')
 ff_wrapper_objs = SConscript('../../interfaces/ff-wrapped/SConscript.ff')
 siw_objs = SConscript('src/SConscript')
 
-common_env.Program( 'dfs_rpiw', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
+common_env.Program( 'dfs_rpiw-test', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
