--- a/planners/dfs_rpiw-ff/SConstruct
+++ b/planners/dfs_rpiw-ff/SConstruct
@@ -10,7 +10,7 @@ if int(debug) == 1 :
 elif int(debug) == 2 :
         common_env.Append( CCFLAGS = ['-g',  '-DNDEBUG' ] )
 else:
-        common_env.Append( CCFLAGS = ['-g', '-DNDEBUG'] )
+        common_env.Append( CCFLAGS = ['-O3', '-DNDEBUG'] )
 
 Export( 'common_env' )
 
@@ -19,4 +19,4 @@ agnostic_objs = SConscript('../../interfaces/agnostic/SConscript.agnostic')
 ff_wrapper_objs = SConscript('../../interfaces/ff-wrapped/SConscript.ff')
 siw_objs = SConscript('src/SConscript')
 
-common_env.Program( 'dfs_rpiw-test', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
+common_env.Program( 'dfs_rpiw', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
