--- a/planners/dfs_rpiw-ff/SConstruct
+++ b/planners/dfs_rpiw-ff/SConstruct
@@ -2,6 +2,7 @@ import os
 
 debug = ARGUMENTS.get( 'debug', 0 )
 common_env = Environment(ENV = os.environ)
+common_env.Append( LINKFLAGS = ['--static'] )
 
 common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11' ] )
 
