--- a/planners/siw_plus-ffparser/SConstruct
+++ b/planners/siw_plus-ffparser/SConstruct
@@ -20,4 +20,4 @@ agnostic_objs = SConscript('../../interfaces/agnostic/SConscript.agnostic')
 ff_wrapper_objs = SConscript('../../interfaces/ff-wrapped/SConscript.ff')
 siw_objs = SConscript('src/SConscript')
 
-common_env.Program( 'srpiw', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
+common_env.Program( 'siw_plus', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
