--- a/planners/siw_plus/SConstruct
+++ b/planners/siw_plus/SConstruct
@@ -2,9 +2,8 @@ import os
 
 debug = ARGUMENTS.get( 'debug', 0 )
 common_env = Environment(ENV = os.environ)
-common_env.Append( LINKFLAGS = ['--static'] )
 
-common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11' ] )
+common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11', '-fPIC' ] )
 
 if int(debug) == 1 :
         common_env.Append( CCFLAGS = ['-g',  '-DDEBUG' ] )
@@ -17,7 +16,7 @@ Export( 'common_env' )
 
 generic_objs = SConscript('../../src/SConscript.aptk')
 agnostic_objs = SConscript('../../interfaces/agnostic/SConscript.agnostic')
-ff_wrapper_objs = SConscript('../../interfaces/ff-wrapped/SConscript.ff')
-dfs_objs = SConscript('src/SConscript')
+python_objs = SConscript('../python/agnostic/SConscript.python')
+siw_plus_objs = SConscript('src/SConscript')
 
-common_env.Program( 'dfs_plus', dfs_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
+common_env.SharedLibrary( 'siw_plus.so', siw_plus_objs + generic_objs + agnostic_objs + python_objs ) 
