--- a/examples/agnostic-examples/bfs/SConstruct
+++ b/examples/agnostic-examples/bfs/SConstruct
@@ -21,8 +21,11 @@ src_objs = [ common_env.Object(s) for s in cxx_sources ] + [ common_env.Object(s
 
 Export('common_env')
 src_objs += SConscript( '../../common/SConscript', 'common_env' )
+generic_objs = SConscript('../../../src/SConscript.aptk')
+agnostic_objs = SConscript('../../../interfaces/agnostic/SConscript.agnostic')
+ff_wrapper_objs = SConscript('../../../interfaces/ff-wrapped/SConscript.ff')
 
 common_env.Append( LIBS=libs)
 common_env.Append( LIBPATH=[ os.path.abspath(p) for p in lib_paths ] )
 
-common_env.Program( 'bfs', src_objs )
+common_env.Program( 'bfs', src_objs + generic_objs + agnostic_objs + ff_wrapper_objs )
