--- a/examples/agnostic-examples/fibonacci_open/SConstruct
+++ b/examples/agnostic-examples/fibonacci_open/SConstruct
@@ -5,8 +5,8 @@ debug = ARGUMENTS.get('debug', 0)
 common_env = Environment()
 
 include_paths = ['../../../include', '../../../interfaces/agnostic', '../..', '/usr/local/include' ]
-lib_paths = [ '../../..', '../../../interfaces/agnostic'  ]
-libs = ['aptk-base','Judy', 'aptk']
+lib_paths = [ ]
+libs = [ ]
 
 common_env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
 
@@ -21,8 +21,12 @@ src_objs = [ common_env.Object(s) for s in cxx_sources ] + [ common_env.Object(s
 
 Export('common_env')
 src_objs += SConscript( '../../common/SConscript', 'common_env' )
+generic_objs = SConscript('../../../src/SConscript.aptk')
+agnostic_objs = SConscript('../../../interfaces/agnostic/SConscript.agnostic')
+ff_wrapper_objs = SConscript('../../../interfaces/ff-wrapped/SConscript.ff')
+
 
 common_env.Append( LIBS=libs)
 common_env.Append( LIBPATH=[ os.path.abspath(p) for p in lib_paths ] )
 
-common_env.Program( 'fibo-bfs', src_objs )
+common_env.Program( 'fibo-bfs', src_objs  + generic_objs + agnostic_objs + ff_wrapper_objs )
