--- a/examples/agnostic-examples/h_C_dyn/SConstruct
+++ b/examples/agnostic-examples/h_C_dyn/SConstruct
@@ -5,8 +5,8 @@ debug = ARGUMENTS.get('debug', 0)
 common_env = Environment()
 
 include_paths = ['../../../include', '../../../interfaces/agnostic', '../../../interfaces/ff-wrapped', '../../../external', '/usr/local/include' ]
-lib_paths = [ '../../..', '../../../interfaces/agnostic', '../../../interfaces/ff-wrapped', '../../../external/libff', '/usr/local/lib'  ]
-libs = [ 'boost_program_options', 'aptk-ff-wrap', 'aptk-base', 'Judy', 'aptk', 'ff' ]
+lib_paths = []
+libs = [ 'boost_program_options' ]
 
 common_env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
 
@@ -17,9 +17,14 @@ else:
 
 cxx_sources = Glob('*.cxx')
 c_sources = Glob('*.c')
+
+Export('common_env')
 src_objs = [ common_env.Object(s) for s in cxx_sources ] + [ common_env.Object(s) for s in c_sources ]
+generic_objs = SConscript('../../../src/SConscript.aptk')
+agnostic_objs = SConscript('../../../interfaces/agnostic/SConscript.agnostic')
+ff_wrapper_objs = SConscript('../../../interfaces/ff-wrapped/SConscript.ff')
 
 common_env.Append( LIBS=libs)
 common_env.Append( LIBPATH=[ os.path.abspath(p) for p in lib_paths ] )
 
-common_env.Program( 'h_C_dyn', src_objs )
+common_env.Program( 'h_C_dyn', src_objs  + generic_objs + agnostic_objs + ff_wrapper_objs )
