+ Added Eval(node, ) interface to heur and search + fixed land_count interface + added fd-example

--- a/examples/agnostic-examples/h_cost_functions/SConstruct
+++ b/examples/agnostic-examples/h_cost_functions/SConstruct
@@ -12,6 +12,9 @@ common_env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
 
 if int(debug) == 1 :
 	common_env.Append( CCFLAGS = ['-g','-Wall', '-std=c++0x', '-DDEBUG' ] )
+elif int(debug) == 2 :
+        common_env.Append( CCFLAGS = ['-g','-Wall', '-std=c++0x', '-DNDEBUG' ] )
+
 else:
 	common_env.Append( CCFLAGS = ['-O3','-Wall', '-std=c++0x', '-DNDEBUG'] )
 
