--- a/planners/anytime_lapkt/SConstruct
+++ b/planners/anytime_lapkt/SConstruct
@@ -3,15 +3,12 @@ import os
 debug = ARGUMENTS.get( 'debug', 0 )
 common_env = Environment(ENV = os.environ)
 
-#common_env.Append( LINKFLAGS = ['--static'] )
-common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11' ] )
+common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11', '-fPIC' ] )
 
 if int(debug) == 1 :
         common_env.Append( CCFLAGS = ['-g',  '-DDEBUG' ] )
 elif int(debug) == 2 :
         common_env.Append( CCFLAGS = ['-g',  '-DNDEBUG' ] )
-elif int(debug) == 3 :
-        common_env.Append( CCFLAGS = ['-g',  '-DDEBUG_RP_HEURISTIC' ] )
 else:
         common_env.Append( CCFLAGS = ['-O3', '-DNDEBUG'] )
 
@@ -19,7 +16,7 @@ Export( 'common_env' )
 
 generic_objs = SConscript('../../src/SConscript.aptk')
 agnostic_objs = SConscript('../../interfaces/agnostic/SConscript.agnostic')
-ff_wrapper_objs = SConscript('../../interfaces/ff-wrapped/SConscript.ff')
-siw_objs = SConscript('src/SConscript')
+python_objs = SConscript('../python/agnostic/SConscript.python')
+atlapkt_objs = SConscript('src/SConscript')
 
-common_env.Program( 'siw_plus', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
+common_env.SharedLibrary( 'atlapkt.so', atlapkt_objs + generic_objs + agnostic_objs + python_objs ) 
