--- a/aptk2/tools/SConscript
+++ b/aptk2/tools/SConscript
@@ -1,14 +1,14 @@
 import os
-Import('common_env')
+Import('env')
 
-include_paths = ['.']
+include_paths = ['.','../..']
 
-common_env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
-common_env.Append( LIBS= [ '-lJudy' ] )
+env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
+env.Append( LIBS= [ '-lJudy' ] )
 
 cxx_sources = Glob('*.cxx')
 c_sources = Glob('*.c')
 
-objects = [ common_env.Object(s) for s in cxx_sources ] + [ common_env.Object(s) for s in c_sources ]
+objects = [ env.Object(s) for s in cxx_sources ] + [ env.Object(s) for s in c_sources ]
 
 Return('objects')
