--- a/planners/at_bfs_f-ffparser-reorder/SConstruct
+++ b/planners/at_bfs_f-ffparser-reorder/SConstruct
@@ -4,11 +4,11 @@ debug = ARGUMENTS.get( 'debug', 0 )
 common_env = Environment(ENV = os.environ)
 
 common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11' ] )
-
 if int(debug) == 1 :
         common_env.Append( CCFLAGS = ['-g',  '-DDEBUG' ] )
 elif int(debug) == 2 :
-        common_env.Append( CCFLAGS = ['-g',  '-DNDEBUG' ] )
+        common_env['CCFLAGS'].append('-pg')
+        common_env.Append(LINKFLAGS = ['-pg'])
 else:
         common_env.Append( CCFLAGS = ['-O3', '-DNDEBUG'] )
 
