--- a/interfaces/agnostic/SConstruct
+++ b/interfaces/agnostic/SConstruct
@@ -6,10 +6,16 @@ env = Environment()
 
 include_paths = ['../../include', '.']
 lib_paths = [ '../..' ]
-libs = ['aptk', 'judy']
+libs = ['aptk',]
+
+include_paths.append( '/usr/include/boost' )
+include_paths.append( '/usr/include/python2.7' )
+env.Append( LIBPATH = [ '/usr/lib/python2.7/config' ] )
+
+env.Append( LIBPATH = [ '/usr/lib' ] )
 
 env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
-
+env.Append( CCFLAGS = [ '-Wall', '-std=c++11', '-fPIC' ] )
 if int(debug) == 1 :
 	env.Append( CCFLAGS = ['-g','-Wall', '-std=c++0x', '-DDEBUG' ] )
 else:
@@ -20,7 +26,9 @@ env.Append( LIBPATH=[ os.path.abspath(p) for p in lib_paths ] )
 
 cxx_sources = Glob('*.cxx')
 c_sources = Glob('*.c')
-
 objects = [ env.Object(s) for s in cxx_sources ] + [ env.Object(s) for s in c_sources ]
 
 env.Library( 'aptk-base', objects )
+env.Append( LIBS = [ '-lboost_python', '-lpython2.7' ] )
+env['STATIC_AND_SHARED_OBJECTS_ARE_THE_SAME']=1
+sharedLib = env.SharedLibrary(target='lapkt', source=objects)
