--- a/interfaces/agnostic/SConstruct
+++ b/interfaces/agnostic/SConstruct
@@ -12,11 +12,11 @@ libs = ['aptk',]
 env.Append( LIBPATH = [ '/usr/lib' ] )
 
 env.Append( CPPPATH = [ os.path.abspath(p) for p in include_paths ] )
-env.Append( CCFLAGS = [ '-Wall', '-std=c++11', '-fPIC' ] )
+env.Append( CCFLAGS = [ '-std=c++11', '-fPIC' ] )
 if int(debug) == 1 :
-	env.Append( CCFLAGS = ['-g','-Wall', '-std=c++0x', '-DDEBUG' ] )
+	env.Append( CCFLAGS = ['-g','-Wall', '-DDEBUG' ] )
 else:
-	env.Append( CCFLAGS = ['-O3','-Wall', '-std=c++0x', '-DNDEBUG'] )
+	env.Append( CCFLAGS = ['-O3','-Wall', '-DNDEBUG'] )
 
 env.Append( LIBS=libs)
 env.Append( LIBPATH=[ os.path.abspath(p) for p in lib_paths ] )
