--- a/planners/at_bfs_f-ffparser-reorder/SConstruct
+++ b/planners/at_bfs_f-ffparser-reorder/SConstruct
@@ -3,6 +3,7 @@ import os
 debug = ARGUMENTS.get( 'debug', 0 )
 common_env = Environment(ENV = os.environ)
 
+
 common_env.Append( CCFLAGS = [ '-Wall', '-std=c++11' ] )
 if int(debug) == 1 :
         common_env.Append( CCFLAGS = ['-g',  '-DDEBUG' ] )
@@ -28,5 +29,12 @@ generic_objs = SConscript('../../src/SConscript.aptk')
 agnostic_objs = SConscript('../../interfaces/agnostic/SConscript.agnostic')
 ff_wrapper_objs = SConscript('../../interfaces/ff-wrapped/SConscript.ff')
 siw_objs = SConscript('src/SConscript')
+siw_objs_py = SConscript('src/SConscript.py')
 
-common_env.Program( 'at_bfs_f', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs ) 
+generic_objs = SConscript('../../src/SConscript.aptk')
+agnostic_objs = SConscript('../../interfaces/agnostic/SConscript.agnostic')
+python_objs = SConscript('../python/agnostic/SConscript.python')
+
+common_env.SharedLibrary( 'atbfsf.so', siw_objs_py + generic_objs + agnostic_objs + python_objs )
+
+common_env.Program( 'at_bfs_f', siw_objs + generic_objs + agnostic_objs + ff_wrapper_objs + python_objs) 
