--- a/src/planners/CMakeLists.txt
+++ b/src/planners/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(anytime_lapkt)
 add_subdirectory(at_bfs_f)
 add_subdirectory(bfs_f)
 add_subdirectory(brfs)
+add_subdirectory(bfws)
 add_subdirectory(delete-free-iw)
 add_subdirectory(delete-free-siw)
 add_subdirectory(dfs_plus)
