Direct submodule pull requests to LAPKT-dev. Make git ignore 'build' and 'release' directories

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ examples/agnostic-examples/successor_generation/succ-gen
 
 # Local directories 
 spikes
+build
+release
 
 # Generated files
 benchmarks/ipc-2006/*.out
