--- a/src/pddl_interface/CMakeLists.txt
+++ b/src/pddl_interface/CMakeLists.txt
@@ -1,6 +1,6 @@
 #
 find_package(Python3 COMPONENTS Interpreter Development)
-find_package(Boost REQUIRED COMPONENTS python38)
+find_package(Boost REQUIRED COMPONENTS python${CMAKE_PYTHON_VERSION})
 #
 add_library(pddl_py_interface)
 #
